// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse 001. parse create statement: Create table 1`] = `
Array [
  Array [
    CreateTableStatement {
      "columns": Array [
        ColumnDef {
          "collation": undefined,
          "dataType": Char {
            "_charcterStringType": "nominal",
            "_stringType": "nominal",
            "length": 10,
            "name": "CHAR",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "id",
          },
          "options": Array [],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Decimal {
            "_decimalType": "nominal",
            "_numericType": "nominal",
            "name": "DECIMAL",
            "precision": 10,
            "scale": 3,
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "price",
          },
          "options": Array [],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Binary {
            "_binaryStringType": "nominal",
            "_stringType": "nominal",
            "length": 20,
            "name": "BINARY",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "name",
          },
          "options": Array [],
        },
      ],
      "constraints": Array [],
      "external": false,
      "fileFormat": undefined,
      "ifNotExists": false,
      "location": undefined,
      "name": ObjectName {
        "value": Array [
          Ident {
            "quoteStyle": "\\"",
            "value": "ITEM",
          },
        ],
      },
      "orReplace": false,
      "query": undefined,
      "withOptions": Array [],
      "withoutRowid": false,
    },
  ],
  undefined,
]
`;

exports[`parse 002. parse create statement: Create table 1`] = `
Array [
  Array [
    CreateTableStatement {
      "columns": Array [
        ColumnDef {
          "collation": undefined,
          "dataType": Varchar {
            "_charcterStringType": "nominal",
            "_stringType": "nominal",
            "length": 100,
            "name": "VARCHAR",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "name",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": NotNull {},
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Double {
            "_numericType": "nominal",
            "name": "DOUBLE",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "lat",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Null {},
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Double {
            "_numericType": "nominal",
            "name": "DOUBLE",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "lng",
          },
          "options": Array [],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "constrained",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Null {},
            },
            ColumnOptionDef {
              "name": Ident {
                "quoteStyle": undefined,
                "value": "pkey",
              },
              "option": Unique {
                "isPrimary": true,
              },
            },
            ColumnOptionDef {
              "name": undefined,
              "option": NotNull {},
            },
            ColumnOptionDef {
              "name": undefined,
              "option": Unique {
                "isPrimary": false,
              },
            },
            ColumnOptionDef {
              "name": undefined,
              "option": Check {
                "expr": BinaryOp {
                  "left": Identifier {
                    "ident": Ident {
                      "quoteStyle": undefined,
                      "value": "constrained",
                    },
                  },
                  "op": BinaryOperator {
                    "value": ">",
                  },
                  "right": Number {
                    "value": "0",
                  },
                },
              },
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "ref",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Foreign {
                "foreignTable": ObjectName {
                  "value": Array [
                    Ident {
                      "quoteStyle": undefined,
                      "value": "othertable",
                    },
                  ],
                },
                "onDelete": undefined,
                "onUpdate": undefined,
                "referredColumns": Array [
                  Ident {
                    "quoteStyle": undefined,
                    "value": "a",
                  },
                  Ident {
                    "quoteStyle": undefined,
                    "value": "b",
                  },
                ],
              },
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "ref2",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Foreign {
                "foreignTable": ObjectName {
                  "value": Array [
                    Ident {
                      "quoteStyle": undefined,
                      "value": "othertable2",
                    },
                  ],
                },
                "onDelete": ReferencialAction {
                  "name": "CASCADE",
                },
                "onUpdate": ReferencialAction {
                  "name": "NO ACTION",
                },
                "referredColumns": Array [],
              },
            },
          ],
        },
      ],
      "constraints": Array [],
      "external": false,
      "fileFormat": undefined,
      "ifNotExists": false,
      "location": undefined,
      "name": ObjectName {
        "value": Array [
          Ident {
            "quoteStyle": undefined,
            "value": "manhattan",
          },
          Ident {
            "quoteStyle": undefined,
            "value": "cities",
          },
        ],
      },
      "orReplace": false,
      "query": undefined,
      "withOptions": Array [],
      "withoutRowid": false,
    },
  ],
  undefined,
]
`;

exports[`parse 003. parse create statement: Create table 1`] = `
Array [
  Array [
    CreateTableStatement {
      "columns": Array [
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "c1",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Check {
                "expr": BinaryOp {
                  "left": Identifier {
                    "ident": Ident {
                      "quoteStyle": undefined,
                      "value": "c1",
                    },
                  },
                  "op": BinaryOperator {
                    "value": ">",
                  },
                  "right": Number {
                    "value": "10",
                  },
                },
              },
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "c2",
          },
          "options": Array [
            ColumnOptionDef {
              "name": Ident {
                "quoteStyle": undefined,
                "value": "c2_positive",
              },
              "option": Check {
                "expr": BinaryOp {
                  "left": Identifier {
                    "ident": Ident {
                      "quoteStyle": undefined,
                      "value": "c2",
                    },
                  },
                  "op": BinaryOperator {
                    "value": ">",
                  },
                  "right": Number {
                    "value": "0",
                  },
                },
              },
            },
          ],
        },
        ColumnDef {
          "collation": undefined,
          "dataType": Int {
            "_numericType": "nominal",
            "name": "INT",
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "c3",
          },
          "options": Array [
            ColumnOptionDef {
              "name": undefined,
              "option": Check {
                "expr": BinaryOp {
                  "left": Identifier {
                    "ident": Ident {
                      "quoteStyle": undefined,
                      "value": "c3",
                    },
                  },
                  "op": BinaryOperator {
                    "value": "<",
                  },
                  "right": Number {
                    "value": "100",
                  },
                },
              },
            },
          ],
        },
      ],
      "constraints": Array [
        Check {
          "_tableConstraint": "nominal",
          "expr": BinaryOp {
            "left": Identifier {
              "ident": Ident {
                "quoteStyle": undefined,
                "value": "c1",
              },
            },
            "op": BinaryOperator {
              "value": "<>",
            },
            "right": Number {
              "value": "0",
            },
          },
          "name": Ident {
            "quoteStyle": undefined,
            "value": "c1_nonzero",
          },
        },
      ],
      "external": false,
      "fileFormat": undefined,
      "ifNotExists": false,
      "location": undefined,
      "name": ObjectName {
        "value": Array [
          Ident {
            "quoteStyle": undefined,
            "value": "t1",
          },
        ],
      },
      "orReplace": false,
      "query": undefined,
      "withOptions": Array [],
      "withoutRowid": false,
    },
  ],
  undefined,
]
`;
